# mandelbrot_fractal

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.ipynb  README.md  benchmark.sh  build.sh  plot.py  report.ipynb
data/: no_optimization.csv  with_optimization.csv
src/: benchmark.sh  common.h  config.h  main.cpp  mandelbrot.cpp  mandelbrot.h  mandelbrot_avx.cpp  mandelbrot_avx.h  mandelbrot_dumb.cpp  mandelbrot_dumb.h  performance_test.cpp  performance_test.h  plot.cpp  plot.h
